Fix portrait header icon visibility

--- a/map/src/styles.css
+++ b/map/src/styles.css
@@ -177,9 +177,9 @@ main{
 
     #backArrow,
     #hamburger {
-        top: 50%;
+        top: 21px;
         margin: 0 14px;
-        transform: translateY(-50%);
+        z-index: 1000;
         height: 62px;
         width: 62px;
         padding: 7px;
